syntax = "proto3";
package constructsserver;
option go_package = "github.com/danielvladco/go-proto-gql/gateway/constructsserver/pb;constructsserver";

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service Constructs {
    rpc Scalars_ (Scalars) returns (Scalars); // all possible scalars and same message as input and output
    rpc Repeated_ (Repeated) returns (Repeated); // all scalars messages and enums as repeated
    rpc Maps_ (Maps) returns (Maps); // all possible maps and different messages as input and output
    rpc Any_ (google.protobuf.Any) returns (google.protobuf.Any); // same name different types
    rpc Anyway_ (Any) returns (AnyInput); // some fake any types
    rpc Empty_ (google.protobuf.Empty) returns (Empty); // empty input and empty output
    rpc Empty2_ (EmptyRecursive) returns (EmptyNested); // messages with all empty fields
    rpc Empty3_ (Empty3) returns (Empty3); // messages with all empty fields
    rpc Ref_ (Ref) returns (Ref);
    rpc Oneof_ (Oneof) returns (Oneof);
    rpc CallWithId (Empty) returns (Empty);
}
message AnyInput {
    google.protobuf.Any any = 1;
}
message Empty3 {
    message Int {
        Empty3 e = 1;
    }
    Int i = 1;
}

message Foo {
    message Foo2 {
        string param1 = 1;
    }
    string param1 = 1;
    string param2 = 2;
}

enum Bar {
    BAR1 = 0;
    BAR2 = 1;
    BAR3 = 2;
}

message Baz {
    string param1 = 1;
}

message Scalars {
    double double = 1;
    float float = 2;
    int32 int32 = 3;
    int64 int64 = 4;
    uint32 uint32 = 5;
    uint64 uint64 = 6;
    sint32 sint32 = 7;
    sint64 sint64 = 8;
    fixed32 fixed32 = 9;
    fixed64 fixed64 = 10;
    sfixed32 sfixed32 = 11;
    sfixed64 sfixed64 = 12;
    bool bool = 13;
    string string = 14;
    bytes bytes = 15;
    Bar enum = 16;
}

message Repeated {
    repeated double double = 1;
    repeated float float = 2;
    repeated int32 int32 = 3;
    repeated int64 int64 = 4;
    repeated uint32 uint32 = 5;
    repeated uint64 uint64 = 6;
    repeated sint32 sint32 = 7;
    repeated sint64 sint64 = 8;
    repeated fixed32 fixed32 = 9;
    repeated fixed64 fixed64 = 10;
    repeated sfixed32 sfixed32 = 11;
    repeated sfixed64 sfixed64 = 12;
    repeated bool bool = 13;
    repeated string string = 14;
    repeated bytes bytes = 15;
    repeated Foo foo = 16;
    repeated Bar bar = 17;
}

message Maps {
    map<int32, int32> int32_int32 = 1;
    map<int64, int64> int64_int64 = 2;
    map<uint32, uint32> uint32_uint32 = 3;
    map<uint64, uint64> uint64_uint64 = 4;
    map<sint32, sint32> sint32_sint32 = 5;
    map<sint64, sint64> sint64_sint64 = 6;
    map<fixed32, fixed32> fixed32_fixed32 = 7;
    map<fixed64, fixed64> fixed64_fixed64 = 8;
    map<sfixed32, sfixed32> sfixed32_sfixed32 = 9;
    map<sfixed64, sfixed64> sfixed64_sfixed64 = 10;
    map<bool, bool> bool_bool = 11;
    map<string, string> string_string = 12;
    map<string, bytes> string_bytes = 15;
    map<string, float> string_float = 16;
    map<string, double> string_double = 17;
    map<string, Foo> string_foo = 13;
    map<string, Bar> string_bar = 14;
}

message Any {
    google.protobuf.Any any = 1;
}

message Empty {
}

message EmptyRecursive {
//    google.protobuf.Empty nested1 = 1;
    EmptyRecursive empty = 2;
}

message EmptyNested {
    message EmptyNested1 {
        message EmptyNested2 {
        }
        EmptyNested2 nested2 = 1;
    }
    EmptyNested1 nested1 = 1;
}

message Timestamp {
    string time = 1;
}

message Ref {
//    google.protobuf.Empty empty = 10; // must disappear as part of is empty validation
    message Bar {
        string param1 = 1;
    }
    message Foo {
        enum En {
            A0 = 0;
            A1 = 1;
        }
        message Baz {
            message Gz {
                string param1 = 1;
            }
        }
        message Bar {
            enum En {
                A0 = 0;
                A1 = 1;
            }
            string param1 = 1;
        }
        Bar bar1 = 1;
        Timestamp local_time2 = 12;
        google.protobuf.Timestamp external_time1 = 13;
        Ref.Bar bar2 = 2;
        En en1 = 3;
        Bar.En en2 = 4;
    }
    Timestamp local_time2 = 12;
    google.protobuf.Timestamp external = 1;
    Timestamp local_time = 11;
    Baz file = 2;
    constructsserver.Foo file_msg = 8;
    .constructsserver.Bar file_enum = 9;
    Foo local = 3;
    .constructsserver.Foo.Foo2 foreign = 4;
    Foo.En en1 = 5;
    Foo.Bar.En en2 = 6;
    Foo.Baz.Gz gz = 7;
}

message Oneof {
    string param1 = 1;
    oneof Oneof1 {
        string param2 = 2;
        string param3 = 3;
    }
    oneof Oneof2 {
        string param4 = 4;
        string param5 = 5;
    }
    oneof Oneof3 {
        string param6 = 6;
    }
}
